--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,13 @@
 		    <artifactId>mybatis</artifactId>
 		    <version>3.5.6</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-ui -->
+		<dependency>
+		    <groupId>org.springdoc</groupId>
+		    <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+		    <version>2.2.0</version>
+		</dependency>
 	
 	</dependencies>
 
