--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.servlet.multipart.max-request-size=100MB
 spring.servlet.multipart.enabled=true
 # video Storage Path
 path.videoStoragePath = video
+# thumbnail Storage Path
+path.thumbnailStoragePath = thumbnail
