feat(#35): 서버 시간대 seoul 로 지정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.servlet.multipart.enabled=true
 path.videoStoragePath = video
 # thumbnail Storage Path
 path.thumbnailStoragePath = thumbnail
+spring.jackson.time-zone=Asia/Seoul
